added css, logic for mongo connection, logic for insert data in the db via form

--- a/tasks-meteor.html
+++ b/tasks-meteor.html
@@ -3,12 +3,20 @@
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
+  <div class="container">
+    <header>
+      <h1>Tasks - MeteorJS</h1>
+    </header>
+    <form class="new-task">
+      <input type="text" name="title" placeholder="Type your task!"/>
+      <input type="submit" value="Submit!"/>
+    </form>
+  {{#each tasks}}
+    {{>task}}
+  {{/each}}
+  </div>
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+<template name="task">
+<li><strong>{{title}}</strong>  -  {{createdAt}}</li>
 </template>
