added delete logic

--- a/tasks-meteor.html
+++ b/tasks-meteor.html
@@ -18,5 +18,5 @@
 </body>
 
 <template name="task">
-  <li><strong>{{title}}</strong>  -  {{createdAt}}</li>
+  <li><strong>{{title}}</strong>  -  {{createdAt}} <button class="delete">Remove</button></li>
 </template>
