added feature to hide finished tasks

--- a/tasks-meteor.html
+++ b/tasks-meteor.html
@@ -6,6 +6,10 @@
   <div class="container">
     <header>
       <h1>Tasks - MeteorJS</h1>
+      <label class="hide-finished">
+        <input type="checkbox" checked="{{hideFinished}}"/>
+        Hide finish tasks
+      </label>
     </header>
     <form class="new-task">
       <input type="text" name="title" placeholder="Type your task!"/>
