--- a/tasks-meteor.html
+++ b/tasks-meteor.html
@@ -26,6 +26,19 @@
 
 <template name="task">
   <li class="{{#if checked}} checked {{/if}}">
+  {{#if isOwner}}
+    <button class="toggle-private">
+      {{#if private}}
+        private
+      {{else}}
+        public
+      {{/if}}
+    </button>
   <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
-  <strong>{{title}}</strong>  -  {{createdAt}} <button class="delete">Remove</button></li>
+  {{/if}}
+  <strong>{{title}}</strong>  -  {{createdAt}}
+  {{#if isOwner}}
+    <button class="delete">Remove</button>
+  {{/if}}
+  </li>
 </template>
